--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,20 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "start": "nodemon ./src/index.js"
   },
+  "devDependencies": { 
+  "supertest": "^6.3.3",
+  "jest": "^29.6.2", 
+  "nodemon": "^3.0.1"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "cors": "^2.8.5"
   }
 }
