--- a/server/package.json
+++ b/server/package.json
@@ -10,17 +10,20 @@
     "test": "jest --detectOpenHandles",
     "start": "nodemon ./src/index.js"
   },
-  "devDependencies": { 
-  "supertest": "^6.3.3",
-  "jest": "^29.6.2", 
-  "nodemon": "^3.0.1"
-},
+  "devDependencies": {
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "cors": "^2.8.5"
+    "pg": "^8.11.2",
+    "sequelize": "^6.32.1"
   }
 }
